Version 7.0 - not yet released
* LUA scripting
* user interface
  - screen layout with 12 infoboxes on the left, vario+3 infoboxes on right
* data files
  - optimise the terrain loader
  - support runway width in CUP files
* devices
  - parse wind from standard NMEA sentence WMV
  - driver for XC Tracer Vario
  - driver for KRT2 radio
  - show detailed error message in device list
  - FLARM/OGN - make it possible to set/download registered device database
  - device manager: show flag if device provides data from
      environmental sensors (temperature, humidity)
  - combine traffic from all FLARM devices (support both FLARM and OGN devices on board)
* weather
  - merge all weather data in one dialog
  - allow showing both terrain and RASP
  - RASP download from various well-known providers
  - show satellite images from pc_met (Deutscher Wetterdienst)
  - show wave forecast from pc_met (Deutscher Wetterdienst)
* calculations
  - merge redundant waves
  - task restart
* tracking
  - use DNS to resolve SkyLines server IP (#2604)
  - enable SkyLines traffic display on Windows
  - show thermals obtained from the XCSoar Cloud server
* analysis
  - enhanced graphics: minor tics, color scheme, layout
  - key labels drawn on lines in several pages
  - task turnpoint label drawn on relevant pages
  - barogram: improved working band ceiling and floor calculation
  - climb history: new display uses time of climb as width of bars
  - new page: vario histogram in climb and cruise mode
  - new page: maccready cross-country speed
  - glide polar: dolphin speed line drawn on polar
* map display
  - new display: glide range line drawn to working floor
* thermal band
  - new algorithm, with improved statistics
  - separate active climb and encounter-averaged bands
* infoboxes
  - added ":1" unit for gradient type displays
  - new infobox: % time non-circling climb
  - new infobox: % climb chart showing proportions of time spent circling climb (gray), cruise,