@@ -55,6 +55,7 @@ The following people and organizations have contributed code to XCSoar:
  Fabian Berstecher <fabian.berstecher@rbe-avionik.de>
  Bruno de Lacheisserie <bruno.de.lacheisserie@gmail.com>
  Peter F Bradshaw <pfb@exadios.com>
+ Stefan Schumann <stefan.schumann@posteo.de>
 
 Documentation:
 
