@@ -23,6 +23,7 @@ Copyright_License {
 
 #include "Device/Register.hpp"
 #include "Device/Driver.hpp"
+#include "Device/Driver/AirControlDisplay.hpp"
 #include "Device/Driver/CAI302.hpp"
 #include "Device/Driver/CaiGpsNav.hpp"
 #include "Device/Driver/CaiLNav.hpp"
@@ -99,6 +100,7 @@ static const struct DeviceRegister *const driver_list[] = {
   &atr833_driver,
   &xctracer_driver,
   &thermalexpress_driver,
+  &acd_driver,
   nullptr
 };
 
