@@ -22,6 +22,7 @@
 
 #include "Device/Driver/Generic.hpp"
 #include "Device/Driver/AltairPro.hpp"
+#include "Device/Driver/AirControlDisplay.hpp"
 #include "Device/Driver/BlueFlyVario.hpp"
 #include "Device/Driver/BorgeltB50.hpp"
 #include "Device/Driver/CAI302.hpp"
@@ -1488,6 +1489,39 @@ TestXCTracer()
 }
 
 static void
+TestACD()
+{
+  NullPort null;
+  Device *device = acd_driver.CreateOnPort(dummy_config, null);
+  ok1(device != NULL);
+
+  NMEAInfo nmea_info;
+
+  nmea_info.Reset();
+  nmea_info.clock = 1;
+
+  /* $PAAVS responses from COM and XPDR must be ignored */
+  ok1(!device->ParseNMEA("$PAAVS,COM,118275,122550,50,50,1,0,0,0*30",nmea_info));
+  ok1(!device->ParseNMEA("$PAAVS,XPDR,7000,1,0,1697,0,0*68",nmea_info));
+
+  nmea_info.Reset();
+  nmea_info.clock = 1;
+
+  /* test ALT response */
+  ok1(device->ParseNMEA("$PAAVS,ALT,526.23,457.33,100500*0E",
+                        nmea_info));
+
+  ok1(nmea_info.pressure_altitude_available);
+  ok1(equals(nmea_info.pressure_altitude, 526.23));
+  ok1(nmea_info.baro_altitude_available);
+  ok1(equals(nmea_info.baro_altitude, 457.33));
+  ok1(nmea_info.settings.qnh_available);
+  ok1(equals(nmea_info.settings.qnh.GetPascal(), 100500));
+
+  delete device;
+}
+
+static void
 TestDeclare(const struct DeviceRegister &driver)
 {
   NullDataHandler handler;
@@ -1558,7 +1592,7 @@ TestFlightList(const struct DeviceRegister &driver)
 
 int main(int argc, char **argv)
 {
-  plan_tests(814);
+  plan_tests(824);
 
   TestGeneric();
   TestTasman();
@@ -1584,6 +1618,7 @@ int main(int argc, char **argv)
   TestFlyNet();
   TestVaulter();
   TestXCTracer();
+  TestACD();
 
   /* XXX the Triadis drivers have too many dependencies, not enabling
      for now */
